Add site.base_url to load resources and commit a first deploy script

--- a/app/_config/site.yml
+++ b/app/_config/site.yml
@@ -3,20 +3,20 @@ angular_version: 1.0.1
 
 profiles:
   development:
-    base_url: http://localhost:4242
-    api_http_url: http://localhost:8080/jege-service/api/1
-    api_resource_url: http://localhost:port/jege-service/api/1
+    base_url: //localhost:4242
+    api_http_url: //localhost:8080/jege-service/api/1
+    api_resource_url: //localhost:port/jege-service/api/1
     api_resource_port: 8080
   staging:
-    base_url: https://jege.github.com/jege-angular
-    api_http_url: http://service-jege.rhcloud.com/api/1
-    api_resource_url: http://service-jege.rhcloud.com:port/api/1
+    base_url: //jege.github.com/jege-angular
+    api_http_url: //service-jege.rhcloud.com/api/1
+    api_resource_url: //service-jege.rhcloud.com:port/api/1
     api_resource_port: 80
     deploy:
       host: github_pages 
   production:
-    base_url: https://jege.github.com/jege-angular
-    api_http_url: http://service-jege.rhcloud.com/api/1
-    api_resource_url: http://service-jege.rhcloud.com:port/api/1
+    base_url: //jege.github.com/jege-angular
+    api_http_url: //service-jege.rhcloud.com/api/1
+    api_resource_url: //service-jege.rhcloud.com:port/api/1
     api_resource_port: 80
     
