--- a/app/_config/site.yml
+++ b/app/_config/site.yml
@@ -1,6 +1,14 @@
 version: 0.0.1
-jquery_version: 1.8.1
-angular_version: 1.0.1
+
+versions:
+  jquery: 1.8.1
+  angular: 1.0.1
+  require: 2.0.6
+  modernizr: 2.6.2
+  bootstrap: 2.1.0
+  less: 1.3.0
+
+minify: false
 
 profiles:
   development:
@@ -8,6 +16,11 @@ profiles:
     api_http_url: //localhost:8080/jege-service/api/1
     api_resource_url: //localhost:port/jege-service/api/1
     api_resource_port: 8080
+  developmentRemote:
+    base_url: //localhost:4242
+    api_http_url: //service-jege.rhcloud.com/api/1
+    api_resource_url: //service-jege.rhcloud.com:port/api/1
+    api_resource_port: 80
   staging:
     base_url: //jege.github.com/jege-angular
     api_http_url: //service-jege.rhcloud.com/api/1
@@ -20,4 +33,5 @@ profiles:
     api_http_url: //service-jege.rhcloud.com/api/1
     api_resource_url: //service-jege.rhcloud.com:port/api/1
     api_resource_port: 80
+    minify: true
     
