--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# AWESTRUCT
 .awestruct_ignore
 .sass-cache/
 app/.awestruct/
@@ -5,6 +6,12 @@ app/_site/
 app/_tmp/
 app/_deploy/
 
+# GLOBAL
+.*
+!.gitignore
+*~
+
+# ECLIPSE
 *.pydevproject
 .project
 .metadata
@@ -14,21 +21,32 @@ tmp/**/*
 *.tmp
 *.bak
 *.swp
-
 *~.nib
 local.properties
 .classpath
 .settings/
 .loadpath
+.factorypath
+target/
 
 # External tool builders
 .externalToolBuilders/
-
 # Locally stored "Eclipse launch configurations"
 *.launch
-
 # CDT-specific
 .cproject
-
 # PDT-specific
 .buildpath
+target
+.settings/*
+!.settings/.jsdtscope
+
+# INTELLIJ IDEA
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# SUBLIME TEXT
+/*.sublime-project
+*.sublime-workspace
