--- a/app/Gemfile
+++ b/app/Gemfile
@@ -9,5 +9,6 @@ gem "therubyracer", "0.10.1"
 gem "vpim", "0.695"
 gem "jruby-openssl", "0.7.6.1", :platforms => :jruby
 gem "rb-inotify", "0.8.8"
+gem "sprockets", "2.5.0"
 gem "less", "2.2.2"
 gem "yui-compressor", "0.9.6"
