--- a/app/_config/site.yml
+++ b/app/_config/site.yml
@@ -8,6 +8,7 @@ versions:
   bootstrap: 2.1.0
   less: 1.3.0
 
+debug: true
 minify: false
 
 profiles:
@@ -26,6 +27,7 @@ profiles:
     api_http_url: //service-jege.rhcloud.com/api/1
     api_resource_url: //service-jege.rhcloud.com:port/api/1
     api_resource_port: 80
+    debug: false
     deploy:
       host: github_pages 
   production:
@@ -33,5 +35,6 @@ profiles:
     api_http_url: //service-jege.rhcloud.com/api/1
     api_resource_url: //service-jege.rhcloud.com:port/api/1
     api_resource_port: 80
+    debug: false
     minify: true
     
